# abwd_declust

./: CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
abwd_declust/: abwd_declust.py  abwd_declust_v2_1.py
abwd_declust/example/dataset/: NZGMDBV4P1_earthquake_source_table_plane.csv  NZGMDBV4P1_fault_plane_table_orig.csv  earthquake_source_table.csv  nodal_plane_2016p858000.csv  nodal_plane_2016p858000.npy  nodal_plane_3366146.csv  nodal_plane_3366146.npy  nodal_plane_3468575.csv  nodal_plane_3468575.npy
